# nfs-ansible

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  inventory.yaml  pyproject.toml
collections/: requirements.yaml
group_vars/: all.yaml  nfs_servers.yaml
host_vars/: cube06.yaml
playbooks/: nfs-server.yaml
